--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html style="background-image: url(http://img.ffffound.com/static-data/assets/6/603a445fabe21f50c741bcff343f2fc4b3d33b28_m.gif); background-position: center center; background-repeat: no-repeat;"></html>
+<html style="background-image: url('何？.gif'); background-position: center center; background-repeat: no-repeat;"></html>
