--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-:)
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>⊙﹏⊙</title>
+    <style>
+    html, body {
+      background: Black;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    body > div, canvas {
+      width: 100%;
+      height: 100%;
+    }
+    </style>
+  </head>
+  <body>
+    <div id="photosensitive-epilepsy"></div>
+    <script>
+      var canvas, ctx;
+
+      function init() {
+        canvas = document.createElement('canvas');
+        canvas.width = document.body.clientWidth;
+        canvas.height = document.body.clientHeight;
+        ctx = canvas.getContext("2d");
+        document.getElementById('photosensitive-epilepsy').appendChild(canvas);
+      }
+
+      function animate() {
+        window.requestAnimationFrame(animate);
+        draw();
+      }
+
+      function getColor() {
+        return"rgb("
+        + ((Math.random() *255) >> 0) + ", "
+        + ((Math.random() *255) >> 0) + ", "
+        + ((Math.random() *255) >> 0) + ")";
+      }
+
+      function draw() {
+          ctx.fillStyle = getColor();
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+          ctx.fillStyle = getColor();
+          ctx.font = 'bold ' + ((Math.random() *180) >> 0) + 'px sans-serif';
+          ctx.textBaseline = 'middle';
+          var m = ctx.measureText('⊙﹏⊙');
+          ctx.fillText('⊙﹏⊙', (canvas.width - m.width) *.5, canvas.height *.5);
+      }
+
+      init();
+      animate();
+    </script>
+  </body>
+</html>
